--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div style="text-align: center;">
   <h1>
-    Benvenuti in {{title}}
+    {{saluti}}
   </h1>
+
+  <h2> Hai a disposizione {{bollini}} bollini!</h2>
 </div>
