--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,9 @@
     {{saluti}}
   </h1>
 
-  <h2> Hai a disposizione {{bollini}} bollini!</h2>
+  <h2>
+    Hai a disposizione {{bollini}} bollini!
+  </h2>
 
   <app-welcome></app-welcome>
 </div>
