--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div style="text-align: center;">
-  <h1>
-    {{saluti}}
-  </h1>
-
-  <h2>
-    Hai a disposizione {{bollini}} bollini!
-  </h2>
-
-  <app-welcome></app-welcome>
-</div>
+<app-login></app-login>
