--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,12 @@
 <label for="userID"> User ID:</label>
-<input type="text" id="userID" placeholder="Nome utente" value="{{userID}}">
+<input type="text" id="userID" placeholder="Nome utente" [(ngModel)] = userID>
 
 <label for="password">Password:</label>
-<input type="password" id="password" placeholder="password">
+<input type="password" id="password" placeholder="password" [(ngModel)] = password>
 
 <button (click) = gestAuth()>Connetti</button>
+
+<br>
+<p>
+  Il tuo UserID è {{userID}} e la tua password è {{password}}
+</p>
