--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<label for="userID"> User ID:</label>
-<input type="text" id="userID" placeholder="Nome utente" [(ngModel)] = userID>
+<div>
+  <label for="userID"> User ID:</label>
+  <input type="text" id="userID" placeholder="Nome utente" [(ngModel)] = userID>
 
-<label for="password">Password:</label>
-<input type="password" id="password" placeholder="password" [(ngModel)] = password>
+  <label for="password">Password:</label>
+  <input type="password" id="password" placeholder="Password" [(ngModel)] = password>
+  <button (click) = gestAuth()>Connetti</button>
+</div>
 
-<button (click) = gestAuth()>Connetti</button>
-
-<br>
-<p>
-  Il tuo UserID è {{userID}} e la tua password è {{password}}
-</p>
+<div *ngIf="!autenticato">
+  {{errorMsg}}
+</div>
