feat: lez #12 added Bootstrap \ fix: styled button on LoginComponent

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 
   <label for="password">Password:</label>
   <input type="password" id="password" placeholder="Password" [(ngModel)] = password>
-  <button (click) = gestAuth()>Connetti</button>
+  <button class="btn btn-primary" (click) = gestAuth()>Connetti</button>
 </div>
 
 <div *ngIf="!autenticato">
