feat: lez #15 added jumbotron

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<app-jumbotron [Titolo] = "titolo" [Sottotitolo]= "sottotitolo"></app-jumbotron>
+
 <div>
   <label for="userID"> User ID:</label>
   <input type="text" id="userID" placeholder="Nome utente" [(ngModel)] = userID>
