--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,19 +11,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" routerLink="/welcome">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" title="Prodotti" href="#">Prodotti</a>
+          <a class="nav-link" title="Prodotti" routerLink="/articoli">Prodotti</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" title="Promozioni" href="#">Promozioni</a>
+          <a class="nav-link" title="Promozioni" routerLink="/promozione">Promozioni</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" title="Fidelity" href="#">Fidelity</a>
+          <a class="nav-link" title="Fidelity" routerLink="/fidelity">Fidelity</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" title="Ordini" href="#">Ordini</a>
+          <a class="nav-link" title="Ordini" routerLink="/ordini">Ordini</a>
         </li>
       </ul>
       <!-- Motore di Ricerca -->
