--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,25 @@
-<app-jumbotron [Titolo] = "titolo" [Sottotitolo]= "sottotitolo"></app-jumbotron>
+<app-jumbotron [Titolo]="titolo" [Sottotitolo]="sottotitolo"></app-jumbotron>
 
-<div>
-  <label for="userID"> User ID:</label>
-  <input type="text" id="userID" placeholder="Nome utente" [(ngModel)] = userID>
-
-  <label for="password">Password:</label>
-  <input type="password" id="password" placeholder="Password" [(ngModel)] = password>
-  <button class="btn btn-primary" (click) = gestAuth()>Connetti</button>
-</div>
-
-<div *ngIf="!autenticato">
-  {{errorMsg}}
+<div class="container login-container">
+  <div class="row">
+      <div class="col-md-6 login-form">
+          <h3>Login Form</h3>
+          <div class="form-group">
+              <input type="text" class="form-control"  id="userId" placeholder="Nome Utente" [(ngModel)] = "userID" >
+          </div>
+          <div class="form-group">
+              <input type="password" class="form-control"  id="password" placeholder="Password" [(ngModel)] = "password">
+          </div>
+          <div class="form-group">
+              <button (click) = gestAuth() class="btnSubmit">Connetti</button>
+          </div>
+          <div class="form-group">
+                  <a href="#" class="ForgetPwd">Password Dimenticata?</a>
+          </div>
+          <div class="alert alert-danger" role="alert" *ngIf='!autenticato'>
+              {{errorMsg}}
+          </div>
+      </div>
+  </div>
 </div>
 
