--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -42,7 +42,8 @@
           <li><a class="dropdown-item" href="#">Registrati</a></li>
           <li><a class="dropdown-item" href="#">Disabilita</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Logout</a></li>
+          <li><a class="dropdown-item" *ngIf="BasicAuth.isLogged()" href="#">Logout {{BasicAuth.loggedUser()}}</a></li>
+          <li><a class="dropdown-item disabled" *ngIf="!BasicAuth.isLogged()" href="#">Logout</a></li>
         </ul>
       </div>
 
