feat: lez #23 accomodation code

--- a/src/app/core/jumbotron/jumbotron.component.html
+++ b/src/app/core/jumbotron/jumbotron.component.html
@@ -4,7 +4,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h2>{{Titolo}}</h2>
-					<p>{{Sottotitolo}}</p>
+					<p>{{SottoTitolo}}</p>
           <ng-container *ngIf="Show">
             <a href="" id="SignUp" class="btn btn btn-primary btn-lg">Accedi</a>
             <a href="" id="SignIn" class="btn btn-success btn-lg">Registrati</a>
