feat: lez #26 added @input for articoli

--- a/src/app/modules/articoli/components/articoli-card/articoli-card.component.html
+++ b/src/app/modules/articoli/components/articoli-card/articoli-card.component.html
@@ -1,11 +1,11 @@
 <div class="col">
   <div class="card card-product-grid">
     <a href="#" class="img-wrap">
-      <img src="assets/images/prodotti/1.jpg" class="img-rounded" width="180" height="225" alt="Barilla - Penne Rigate Kg 0.5">
+      <img src="{{articolo.imageUrl}}" class="img-rounded" width="180" height="225" alt="Barilla - Penne Rigate Kg 0.5">
     </a>
     <div class="info-wrap">
-      <a href="#" class="title text-truncate">Barilla - Penne Rigate Kg 0.5</a>
-      <div class="price mb-2">€ 0.89</div>
+      <a href="#" class="title text-truncate">{{articolo.descrizione}}</a>
+      <div class="price mb-2">{{articolo.prezzo | currency: 'EUR'}}</div>
       <div class="btn-group">
         <a href="#" data-bs-toggle="dropdown" class="btn btn-sm btn-light" role="button" aria-label="Modifica prodotto">
           <i class="material-icons md-edit"></i>Modifica
